bpo-44947: Refine the syntax error for trailing commas in import statements (GH-27814)

(cherry picked from commit b2f68b190035540872072ac1d2349e7745e85596)

Co-authored-by: Pablo Galindo Salgado <Pablogsal@gmail.com>